--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -7,10 +7,10 @@
   <string name="about_version">Έκδοση: %s</string>
   <string name="about_revision">Αναθεώρηση: %s</string>
   <string name="about_build_date">Ημερομηνία δόμησης: %s</string>
-  <string name="licenses_waiting">Παρακαλώ περιμένετε όσο οι άδειες ενημερώνονται...</string>
-  <string name="album_downloading">Γίνεται λήψη «%s»...</string>
+  <string name="licenses_waiting">Παρακαλώ περιμένετε όσο οι άδειες ενημερώνονται…</string>
+  <string name="album_downloading">Γίνεται λήψη «%s»…</string>
   <string name="app_name">Αναγνώστης Κόμικ</string>
-  <string name="bookmark_help">Μπορείτε να εισάγετε είτε μια πλήρης τοποθεσία φακέλου που αρχίζει με / (όπως /Εικόνες or /Λήψεις), η μια διεύθυνση URL (όπως domain.com/comics/index.xml). Εάν παραλείψετε το πρόθεμα http://, θα προστεθεί αυτόματα, ακόμα και αν δεν αρχίζει με /. Βλέπετε «Βοήθεια» για περισσότερες λεπτομέρειες σχετικά με «Απομακρυσμένες συλλογές».</string>
+  <string name="bookmark_help">Μπορείτε να εισάγετε είτε μια πλήρης τοποθεσία φακέλου που αρχίζει με / (όπως /Εικόνες ή /Λήψεις), η μια διεύθυνση URL (όπως domain.com/comics/index.xml). Εάν παραλείψετε το πρόθεμα http://, θα προστεθεί αυτόματα, ακόμα και αν δεν αρχίζει με /. Βλέπετε «Βοήθεια» για περισσότερες λεπτομέρειες σχετικά με «Απομακρυσμένες συλλογές».</string>
   <string name="bookmark_title">Τίτλος</string>
   <string name="bookmark_url">Φάκελος ή διεύθυνση</string>
   <string name="bookmarks">Σελιδοδείκτες</string>
@@ -34,7 +34,7 @@
   <string name="dialog_album_title">Τίτλος</string>
   <string name="dialog_confirm_title">Επιβεβαίωση</string>
   <string name="dialog_error_title">Σφάλμα</string>
-  <string name="dialog_progress_browser_message">Παρακαλώ περιμένετε κατά τη φόρτωση...</string>
+  <string name="dialog_progress_browser_message">Παρακαλώ περιμένετε κατά τη φόρτωση…</string>
   <string name="error_no_album_loaded">Δεν επιλέχθηκε αρχείο. Παρακαλώ χρησιμοποιήστε το μενού για να διαλέξετε αρχείο.</string>
   <string name="error_no_connection_available"> Η σύνδεση στο διαδίκτυο δεν είναι διαθέσιμη.</string>
   <string name="error_no_external_storage">Δεν βρέθηκε εξωτερικός χώρος αποθήκευσης</string>
@@ -62,6 +62,7 @@
   <string name="preference_double_page_label">Λειτουργία δύο σελίδων</string>
   <string name="preference_double_page_summary">Εμφανίζει δύο σελίδες στην οθόνη την ίδια στιγμή</string>
   <string name="preference_fast_scroll_label">Γρήγορη κύλιση</string>
+  <string name="preference_fast_scroll_summary">Ενεργοποιεί τον αντίχειρα που μπορεί να συρθεί για να μετακινηθείτε γρήγορα μέσα από καθε σελίδα</string>
   <string name="preference_fit_to_screen_label">Προσαρμογή στην οθόνη</string>
   <string name="preference_fit_to_screen_summary">Μεγεθύνει την εικόνα αν είναι μικρότερη από την ανάλυση της οθόνης</string>
   <string name="preference_full_screen_label">Πλήρης οθόνη</string>
@@ -70,6 +71,8 @@
   <string name="preference_high_quality_summary">Προσοχή! Μπορεί να μειώσουν ομαλότητα κίνησης και να αυξήσουν τη χρήση μνήμης</string>
   <string name="preference_overlay_duration_label">Αριθμός σελίδας</string>
   <string name="preference_overlay_duration_summary">Διάρκεια που θα εμφανίζεται ο αριθμός της σελίδας</string>
+  <string name="preference_sample_label">Αναγκάστε την εικόνα να παει σε κλίμακα</string>
+  <string name="preference_sample_summary">Βάλτε σε κλίμακα για να εφαρμοστεί κατά το χρόνο φόρτωσης για μια εικόνα και ετσι να εξοικονομήσετε χώρο στη μνήμη</string>
   <string name="preference_zoom_label">Μεγέθυνση</string>
   <string name="preference_zoom_summary">Λειτουργία για κλιμακοποίηση σελιδών</string>
   <string name="preference_category_misc">Λοιπά</string>
@@ -82,7 +85,7 @@
   <string name="password">Κωδικός</string>
   <string name="remember_password">Απομνημόνευση κωδικού</string>
   <string name="contributors_label">Συνεισφέροντες:</string>
-  <string name="contributors">- ultrapeer (Τουρκική μετάφραση και διορθώσεις για τη Γαλλική)\n- Zufre (Ισπανική μετάφραση)\n- Kathjal on Transifex (Ιταλική μετάφραση)\n- Shark103 on Transifex (Πολωνική μετάφραση)\n- Xesusmosquera on Transifex (Γαλικιακή μετάφραση)\n- Jules Blok (φυσική κατάταξη αριθμών για σελίδες)</string>
+  <string name="contributors">- Jules Blok (φυσική διάταξη των αριθμών σελίδας και την εφαρμογή αυτόματης εναλλαγής) \n- ultrapeer (Τούρκικα μετάφραση και τη γαλλική typos) \n- Zufre (ισπανική μετάφραση) \n- Kathjal στο Transifex (ιταλική μετάφραση) \n- Shark103 στο Transifex (πολωνική μετάφραση) \n- Xesusmosquera στο Transifex (μετάφραση Γαλικίας) \n- Evropi στο Transifex (ελληνική μετάφραση) \n- Ανώνυμος (ρωσική μετάφραση) \n- Marcelo Ghelman στο Transifex (πορτογαλική μετάφραση)</string>
   <string name="browser_album_title">Χωρίς τίτλο</string>
   <string name="preference_edges_resistance_label">Αντίσταση άκρων</string>
   <string name="preference_edges_resistance_summary">Αντίσταση σε κινείσεις αλλαγής σελίδας</string>
@@ -90,4 +93,9 @@
   <string name="preference_page_transition_speed_summary">Η ταχύτητα για το εφέ κίνησης κατα εναλλαγή στην επόμενη/προηγούμενη σελίδα</string>
   <string name="preference_reading_direction_label">Κατεύθυνση ανάγνωσης από αριστερά προς δεξιά</string>
   <string name="preference_reading_direction_summary">Κάντε κίνηση προς τα αριστερά για να μεταβείτε στην επόμενη σελίδα</string>
+  <string name="preference_auto_rotate_label">Αυτόματη αλλαγή προσανατολισμού της οθόνης.</string>
+  <string name="preference_auto_rotate_summary">(Πειραματικό) Αλλάζει τον προσανατολισμό της οθόνης ώστε να ταιριάζει καλύτερα σε κάθε σελίδα.</string>
+  <string name="no_data">Δεν υπάρχουν δεδομένα</string>
+  <string name="fullscreen_notice">Παρακαλώ αγγίξτε από πάνω προς τα κάτω για να εμφανίσετε το μενού επιλογών και να αφήσετε την λειτουργία πλήρους οθόνης.</string>
+  <string name="quit">\'Εξοδος</string>
 </resources>
