--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,4 +109,5 @@
   <string name="fullscreen_notice">Please scroll from top to bottom to display options menu and leave fullscreen mode.</string>
   <string name="quit">Quit</string>
   <string name="thumbnail">Thumbnail</string>
+  <string name="unknown">unknown</string>
 </resources>
